[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-stats"
version = "1.0.0"
description = "Analyze GitHub repositories and generate statistics reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alex-2Code", email = "alex@example.com"}
]
keywords = ["github", "statistics", "analysis", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
repo-stats = "repo_stats.cli:main"

[project.urls]
Homepage = "https://github.com/Alex-2Code/repo-stats"
Repository = "https://github.com/Alex-2Code/repo-stats"
Issues = "https://github.com/Alex-2Code/repo-stats/issues"
